--- a/lab5/client/index.html
+++ b/lab5/client/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="someone ">
-    <title>Tina's Book Store</title>
+    <title> Book Store</title>
 
     <link href="./resources/bootstrap.min.css" rel="stylesheet">
     <link href="./resources/carousel.css" rel="stylesheet">
